# JSON_Parser

./: .gitignore  CMakeLists.txt  README.md  student.json
Source/: AutoGrader.cpp  AutoGrader.h  Debug.h  Formatting.h  JSONParser.cpp  JSONParser.h  Model.cpp  Model.h  Testable.h  main.cpp
Tests/: NoFilterTest  NoFilterTest.txt
